syntax = "proto3";

import "google/protobuf/empty.proto";

package org.simplity.apiscdb;

message PostContractRequest {
    ContractHeader contract = 1;
}

message GetContractContractIdRequest {
    string contractId = 1;
}

message PutContractContractIdRequest {
    ContractHeader contract = 1;
    string contractId = 2;
}

message Bench {
    int32 bench = 1;
    int32 contractCschdFk = 2;
    string createdBy = 3;
    string createdDate = 4;
    int32 cscbsPk = 5;
    string isDeleted = 6;
    string lastUpdatedBy = 7;
    string lastUpdatedDate = 8;
    int32 lockNum = 9;
}

message ContractHeader {
    string assetName = 1;
    string assetOwner = 2;
    repeated Bench benches = 3;
    int64 contractEndDate = 4;
    string contractLink = 5;
    int64 contractSignDate = 6;
    int64 contractStartDate = 7;
    string dealCounterParty = 8;
    string dealName = 9;
    int32 econs = 10;
    enum ContractHeader_EconsUOM {
        NPV = 0;
        GM = 1;
    }
    ContractHeader_EconsUOM econsUOM = 11;
    int32 excessThroughputRate = 12;
    enum ContractHeader_ExcessThroughputRateUOM {
        M3 = 0;
        BBL = 1;
        USG = 2;
    }
    ContractHeader_ExcessThroughputRateUOM excessThroughputRateUOM = 13;
    string externalContractNum = 14;
    enum ContractHeader_LeaseType {
        OPERATING = 0;
        CAPITAL = 1;
        LTCC = 2;
    }
    ContractHeader_LeaseType leaseType = 15;
    repeated Location locations = 16;
    string notes = 17;
    int32 region = 18;
    repeated Role roleDetails = 19;
    enum ContractHeader_Statu {
        LIVE = 0;
        CLOSED = 1;
    }
    ContractHeader_Statu status = 20;
    repeated Storage storages = 21;
    string terminal = 22;
}

message ContractHeaders {
    repeated ContractHeader contractHeaders = 1;
}

message ErrorResponse {
    string message = 1;
}

message Location {
    string city = 1;
    int32 contractCschdFk = 2;
    int32 country = 3;
    string county = 4;
    string createdBy = 5;
    string createdDate = 6;
    int32 csclsPk = 7;
    string isDeleted = 8;
    string lastUpdatedBy = 9;
    string lastUpdatedDate = 10;
    int32 lockNum = 11;
    string state = 12;
}

message Role {
    int32 contractCschdFk = 1;
    string createdBy = 2;
    string createdDate = 3;
    int32 cscrdPk = 4;
    string isDeleted = 5;
    string lastUpdatedBy = 6;
    string lastUpdatedDate = 7;
    int32 lockNum = 8;
    string primaryIndividual = 9;
    int32 roleCscrtFk = 10;
    string secondaryIndividual = 11;
}

message RoleType {
    int32 id = 1;
    string name = 2;
}

message RoleTypes {
    repeated RoleType roleTypes = 1;
}

message SearchCriteria {
    string assetName = 1;
    string assetOwner = 2;
    int32 bench = 3;
    string bpContractNum = 4;
    string bpContractingEntity = 5;
    string city = 6;
    enum SearchCriteria_ContractStatu {
        LIVE = 0;
        CLOSED = 1;
    }
    SearchCriteria_ContractStatu contractStatus = 7;
    int32 country = 8;
    string county = 9;
    string dealCounterParty = 10;
    string dealName = 11;
    int32 gradeGroup = 12;
    int32 region = 13;
    string segment = 14;
    string state = 15;
    string terminal = 16;
}

message Storage {
    int32 contractCschdFk = 1;
    string createdBy = 2;
    string createdDate = 3;
    int32 cscsgPk = 4;
    int32 currency = 5;
    string description = 6;
    enum Storage_GradeGroup {
       ETHANOL = 0;
       CRUDE = 1;
       ULSD = 2;
       BIODIESEL = 3;
       MTBE = 4;
       FAME = 5;
       DILUENT = 6;
       CURDE = 7;
    }
    Storage_GradeGroup gradeGroup = 7;
    string isDeleted = 8;
    string lastUpdatedBy = 9;
    string lastUpdatedDate = 10;
    int32 lockNum = 11;
    int32 quantity = 12;
    string quantityUom = 13;
    string storageEndDate = 14;
    int32 storageRate = 15;
    string storageStartDate = 16;
    string tankId = 17;
}

service APISCDBService {
    // contractFind
    rpc GetContract(google.protobuf.Empty) returns (ContractHeaders) {}
    // contractCreate
    rpc PostContract(PostContractRequest) returns (ContractHeader) {}
    // contractGet
    rpc GetContractContractId(GetContractContractIdRequest) returns (ContractHeader) {}
    // contractUpdate
    rpc PutContractContractId(PutContractContractIdRequest) returns (ContractHeader) {}
}
